Fix bug in z-index of info panel

--- a/css/forager.css
+++ b/css/forager.css
@@ -39,6 +39,9 @@ img {
 }
 
 #info {
-    z-index: 1050;
     top: 80px;
+}
+
+.navbar {
+    z-index: 1050;
 }
